--- a/apps/drupal-lab/config/sync/core.entity_view_display.paragraph.headline.default.yml
+++ b/apps/drupal-lab/config/sync/core.entity_view_display.paragraph.headline.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.headline.field_align
     - field.field.paragraph.headline.field_headline
+    - field.field.paragraph.headline.field_headline_size
     - field.field.paragraph.headline.field_icon_extend
     - field.field.paragraph.headline.field_quoted
     - field.field.paragraph.headline.field_style
@@ -35,6 +36,13 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_headline_size:
+    weight: 10
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
     region: content
   field_icon_extend:
     type: entity_reference_revisions_entity_view
