--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -32,6 +32,7 @@
     "@bolt/components-card": "^1.1.2",
     "@bolt/components-chip": "^1.1.2",
     "@bolt/components-chip-list": "^1.1.2",
+    "@bolt/components-code-snippet": "^0.0.0",
     "@bolt/components-copy-to-clipboard": "^1.1.2",
     "@bolt/components-critical-fonts": "^1.1.3",
     "@bolt/components-device-viewer": "^1.1.2",
