--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ php:
   - 7.1
 
 addons:
+  sauce_connect: true
   apt:
     sources:
     - ubuntu-toolchain-r-test
@@ -25,14 +26,20 @@ before_script:
 
 install:
 - yarn install
+- npm install -g nightwatch
 - npm run setup
 
 before_script:
 - npm run lint
 - npm test
+- npm run serve:dist &
 
 script:
 - travis_wait time npm run build && ./scripts/deploy.sh && node ./scripts/netlify-notifier.js && ./scripts/update-read-only-git-repos.sh
+- cd apps/pattern-lab && npm run serve
+- nightwatch --config nightwatch.js --env chrome,ie11
+  # This one feels hacky, but does the job of killing the server
+- pkill node
 #- travis_wait npm run build && npm run deploy # only run deploy if build is successful. Can't do `after_success` b/c if deploy fails, the build still reports success. Can't use `deploy` step b/c Travis skips that on PRs.
 
 after_success: # Warning: this fires after a build is already marked as successful so failing this will not fail the build.
