--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
     "node-fetch": "^2.0.0",
     "npm-run-all": "^4.1.2",
     "web-component-tester": "^6.3.0",
-    "yaml-lint": "^1.2.2"
+    "yaml-lint": "^1.2.2",
+    "nightwatch": "^0.9.20"
   },
   "workspaces": [
     "packages/components/bolt-action-blocks",
