Add 1st End to End Integration Test (#621)
* test: testing initial nightwatch test

* Update nightwatch.js

* Update .travis.yml

* Update pattern-lab-compiling.js

* Update .travis.yml

* Update pattern-lab-compiling.js

* Update pattern-lab-compiling.js

* fix: refactoring nightwatch test to account for async function grabbing url to latest netlify build

* fix: removing shell script timeout

* Remove old comment from Travis config

* refactor: update nightwatch tests to use now.sh URLs. update to post screenshots and test data back to github

* fix: fixing test results

* clean: cleaning up test results that get output to Github

--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
     "now": "^11.0.6",
     "npm-run-all": "^4.1.2",
     "web-component-tester": "^6.3.0",
-    "yaml-lint": "^1.2.2"
+    "yaml-lint": "^1.2.2",
+    "nightwatch": "^0.9.20"
   },
   "workspaces": [
     "packages/components/bolt-action-blocks",
