--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ php:
   - 7.1
 
 addons:
+  sauce_connect: true
   apt:
     sources:
     - ubuntu-toolchain-r-test
@@ -25,6 +26,7 @@ before_script:
 
 install:
 - yarn install
+- yarn global add nightwatch
 - npm run setup
 
 before_script:
@@ -34,6 +36,7 @@ before_script:
 # Can't do deploy on `after_success` b/c if deploy fails, the build still reports success. Can't use `deploy` step b/c Travis skips that on PRs.
 script:
 - time bash ./travis.sh
+- nightwatch --config nightwatch.js --env chrome,ie11
 
 after_success: # Warning: this fires after a build is already marked as successful so failing this will not fail the build.
   - git status # Just want to check
