refactor: remove old share1 and share2 icons; new share SVG icon replaces previous versions; updating icon component schema + Drupal Lab config to keep things up to date

--- a/apps/drupal-lab/config/sync/field.storage.paragraph.field_icon.yml
+++ b/apps/drupal-lab/config/sync/field.storage.paragraph.field_icon.yml
@@ -261,11 +261,8 @@ settings:
       value: search
       label: search
     -
-      value: share1
-      label: share1
-    -
-      value: share2
-      label: share2
+      value: share
+      label: share
     -
       value: training
       label: training
