Text Component WIP -- Initial file creaton and PL pages placement

--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -53,6 +53,7 @@
     "@bolt/components-smooth-scroll": "^1.1.2",
     "@bolt/components-sticky": "^1.1.2",
     "@bolt/components-teaser": "^1.1.4",
+    "@bolt/components-text": "0.0.0",
     "@bolt/components-tooltip": "^1.1.4",
     "@bolt/components-unordered-list": "^1.1.4",
     "@bolt/components-video": "^1.1.4",
