Updated composer generate and removed body tag from page CT

--- a/apps/drupal-lab/config/sync/core.entity_view_display.node.page.teaser.yml
+++ b/apps/drupal-lab/config/sync/core.entity_view_display.node.page.teaser.yml
@@ -4,24 +4,15 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.page.body
+    - field.field.node.page.field_paragraphs
     - node.type.page
   module:
-    - text
     - user
 id: node.page.teaser
 targetEntityType: node
 bundle: page
 mode: teaser
 content:
-  body:
-    label: hidden
-    type: text_summary_or_trimmed
-    weight: 101
-    settings:
-      trim_length: 600
-    third_party_settings: {  }
-    region: content
   links:
     weight: 100
     region: content
