--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "npm-run-all": "^4.1.2",
     "web-component-tester": "^6.3.0",
     "yaml-lint": "^1.2.2",
-    "nightwatch": "^0.9.20"
+    "nightwatch": "^0.9.20",
+    "git-semver-tags": "^1.3.6"
   },
   "workspaces": [
     "packages/components/bolt-action-blocks",
