--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,11 @@
 {
-  "**/*.js": "npm run lint:js",
-  "**/*.scss": "npm run lint:style",
-  "**/*.yaml": "npm run lint:yaml",
-  "**/*.twig": "npm run lint:twig"
+  linters: {
+    "{packages,apps}/**/*.js": "npm run lint:js",
+    "**/*.scss": "npm run lint:style",
+    "**/*.yaml": "npm run lint:yaml",
+    "**/*.twig": "npm run lint:twig"
+  },
+  ignore: [
+    "**/.boltrc.js"
+  ]
 }
