--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -3,9 +3,9 @@
     "{packages,apps}/**/*.js": "npm run lint:js",
     "**/*.scss": "npm run lint:style",
     "**/*.yaml": "npm run lint:yaml",
-    "**/*.twig": "npm run lint:twig"
   },
   ignore: [
-    "**/.boltrc.js"
+    "**/.boltrc.js",
+    "apps/drupal-lab"
   ]
 }
