--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:pl": "cd apps/pattern-lab && npm run build:prod",
     "build:bolt-site": "cd apps/bolt-site && npm run build:prod",
     "Xbuild:drupal-lab": "cd apps/drupal-lab && cd web/themes/flash && npm run build && cd - && composer run build",
-    "Xbuild:icons": "lerna exec --scope @bolt/components-icons -- npm run build",
+    "build:icons": "lerna exec --scope @bolt/components-icons -- npm run build",
     "build": "npm-run-all --parallel build:* --aggregate-output --print-label --print-name",
     "composer:pl": "cd apps/pattern-lab && composer install --no-interaction",
     "composer:core-php": "cd packages/core-php && composer install --no-interaction",
