--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "Xcomposer:drupal-lab": "cd apps/drupal-lab && composer install --no-interaction",
     "composer": "npm-run-all --parallel composer:* --aggregate-output --print-label --print-name",
     "bootstrap": "lerna bootstrap --reject-cycles",
-    "postbootstrap": "npm run build:icons && node scripts/monorepo-tests.js",
+    "Xpostbootstrap": "npm run build:icons && node scripts/monorepo-tests.js",
     "Xpredeploy": "npm run build",
     "deploy": "./scripts/deploy.js",
     "clean:git": "git clean -xdf && rm -rf apps/**/vendor apps/**/node_modules && find . -empty -type d -delete",
@@ -87,7 +87,6 @@
     "node-fetch": "^2.0.0",
     "now": "^11.0.6",
     "npm-run-all": "^4.1.2",
-    "web-component-tester": "^6.3.0",
     "yaml-lint": "^1.2.2",
     "nightwatch": "^0.9.20",
     "git-semver-tags": "^1.3.6"
