--- a/.travis.yml
+++ b/.travis.yml
@@ -14,48 +14,49 @@ php:
   #   - g++-4.8
   #   - graphicsmagick
 
-before_install:
-- nvm install # version lifted from `.nvmrc`
-# yarn install
-- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.6.0
-- export PATH="$HOME/.yarn/bin:$PATH"
-- node --version && npm --version && yarn --version && composer --version
-- composer global require hirak/prestissimo
-- if [[ -n "$GITHUB_TOKEN" ]]; then composer config -g github-oauth.github.com ${GITHUB_TOKEN};
-  fi;
+# before_install:
+# - nvm install # version lifted from `.nvmrc`
+# # yarn install
+# - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.6.0
+# - export PATH="$HOME/.yarn/bin:$PATH"
+# - node --version && npm --version && yarn --version && composer --version
+# - composer global require hirak/prestissimo
+# - if [[ -n "$GITHUB_TOKEN" ]]; then composer config -g github-oauth.github.com ${GITHUB_TOKEN};
+#   fi;
 
-before_script:
-- phpenv config-rm xdebug.ini
+# before_script:
+# - phpenv config-rm xdebug.ini
 
 install:
 #- yarn global add nightwatch
-- npm run setup
+# - npm run setup
+- npm run composer:pl
 
-before_script:
+# before_script:
 #- npm run lint
 #- npm test
 
 # Can't do deploy on `after_success` b/c if deploy fails, the build still reports success. Can't use `deploy` step b/c Travis skips that on PRs.
-script:
-- time bash ./travis.sh
+# script:
+# - time bash ./travis.sh
 #- nightwatch --config nightwatch.js --env chrome,ie11
 
-after_success: # Warning: this fires after a build is already marked as successful so failing this will not fail the build.
-  - git status # Just want to check
+# after_success: # Warning: this fires after a build is already marked as successful so failing this will not fail the build.
+#   - git status # Just want to check
 
 cache:
-  #apt: true
+  apt: true
   yarn: true
   directories:
     #- node_modules
     #- $HOME/.cache/yarn
-    - $HOME/.composer
-    - apps/pattern-lab/vendor
+    # - $HOME/.composer
+    # - apps/pattern-lab/vendor
     #- apps/drupal-lab/vendor
-    - apps/drupal-lab/web/core
-    - apps/bolt-site/vendor
+    # - apps/drupal-lab/web/core
+    # - apps/bolt-site/vendor
+    # - packages/core-php/vendor
     #- apps/pw-site/vendor
-    - packages/core-php/vendor
 
 notifications:
   email:
