--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "build:icons": "lerna exec --scope @bolt/components-icons -- npm run build",
     "build": "npm-run-all --parallel build:* --aggregate-output --print-label --print-name",
     "composer:pl": "cd apps/pattern-lab && composer install --no-interaction",
-    "composer:core-php": "cd packages/core-php && composer install --no-interaction",
-    "composer:bolt-site": "cd apps/bolt-site && composer install --no-interaction",
+    "Xcomposer:core-php": "cd packages/core-php && composer install --no-interaction",
+    "Xcomposer:bolt-site": "cd apps/bolt-site && composer install --no-interaction",
     "Xcomposer:pw-site": "cd apps/pw-site && composer install --no-interaction",
     "Xcomposer:drupal-lab": "cd apps/drupal-lab && composer install --no-interaction",
     "composer": "npm-run-all --parallel composer:* --aggregate-output --print-label --print-name",
