--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "Xbuild:drupal-lab": "cd apps/drupal-lab && cd web/themes/flash && npm run build && cd - && composer run build",
     "build:icons": "lerna exec --scope @bolt/components-icons -- npm run build",
     "build": "npm-run-all --parallel build:* --aggregate-output --print-label --print-name",
-    "composer:pl": "cd apps/pattern-lab && composer install --no-interaction",
+    "composer:pl": "cd apps/pattern-lab && composer install --no-interaction --prefer-dist",
     "Xcomposer:core-php": "cd packages/core-php && composer install --no-interaction",
     "Xcomposer:bolt-site": "cd apps/bolt-site && composer install --no-interaction",
     "Xcomposer:pw-site": "cd apps/pw-site && composer install --no-interaction",
