--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "lint": "npm-run-all --continue-on-error --serial lint:*",
     "precommit": "lint-staged",
     "prepush": "npm run test",
-    "test:js": "jest",
-    "test:js:watch": "jest --watch",
-    "test:php": "cd packages/core-php && composer run test",
-    "test": "npm-run-all --serial test:*",
+    "Xtest:js": "jest",
+    "Xtest:js:watch": "jest --watch",
+    "Xtest:php": "cd packages/core-php && composer run test",
+    "Xtest": "npm-run-all --serial test:*",
     "watch:icons": "lerna exec --scope @bolt/components-icons -- npm run watch"
   },
   "config": {
