--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ language: php
 php:
   - 7.1
 
+git:
+  depth: 2
+
 #addons:
   #sauce_connect: true
   # apt:
@@ -24,15 +27,15 @@ php:
 # - if [[ -n "$GITHUB_TOKEN" ]]; then composer config -g github-oauth.github.com ${GITHUB_TOKEN};
 #   fi;
 
-# before_script:
-# - phpenv config-rm xdebug.ini
+before_script:
+- phpenv config-rm xdebug.ini
 
 install:
 #- yarn global add nightwatch
 # - npm run setup
 - npm run composer:pl
 
-# before_script:
+before_script:
 #- npm run lint
 #- npm test
 
