--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "build:icons": "lerna exec --scope @bolt/components-icons -- npm run build",
     "build": "npm-run-all --parallel build:* --aggregate-output --print-label --print-name",
     "composer:pl": "cd apps/pattern-lab && composer install --no-interaction --prefer-dist",
-    "Xcomposer:core-php": "cd packages/core-php && composer install --no-interaction",
-    "Xcomposer:bolt-site": "cd apps/bolt-site && composer install --no-interaction",
-    "Xcomposer:pw-site": "cd apps/pw-site && composer install --no-interaction",
-    "Xcomposer:drupal-lab": "cd apps/drupal-lab && composer install --no-interaction",
+    "composer:core-php": "cd packages/core-php && composer install --no-interaction --prefer-dist",
+    "composer:bolt-site": "cd apps/bolt-site && composer install --no-interaction --prefer-dist",
+    "composer:pw-site": "cd apps/pw-site && composer install --no-interaction --prefer-dist",
+    "composer:drupal-lab": "cd apps/drupal-lab && composer install --no-interaction --prefer-dist",
     "composer": "npm-run-all --parallel composer:* --aggregate-output --print-label --print-name",
     "bootstrap": "lerna bootstrap --reject-cycles",
     "Xpostbootstrap": "npm run build:icons && node scripts/monorepo-tests.js",
@@ -50,13 +50,13 @@
     "lint:style:fix": "npm run lint:style -- --fix",
     "lint:twig": "./packages/core-php/vendor/bin/twig-lint lint packages --only-print-errors && ./packages/core-php/vendor/bin/twig-lint lint apps --only-print-errors --exclude=apps/drupal-lab",
     "lint:yaml": "yamllint 'packages/**/*.yml' --ignore='**/vendor/**'",
-    "lint": "npm-run-all --continue-on-error --serial lint:*",
+    "lint": "npm-run-all --continue-on-error --parallel lint:*",
     "precommit": "lint-staged",
     "prepush": "npm run test",
-    "Xtest:js": "jest",
-    "Xtest:js:watch": "jest --watch",
-    "Xtest:php": "cd packages/core-php && composer run test",
-    "Xtest": "npm-run-all --serial test:*",
+    "test:js": "jest",
+    "test:js:watch": "jest --watch",
+    "test:php": "cd packages/core-php && composer run test",
+    "test": "npm-run-all --parallel test:*",
     "watch:icons": "lerna exec --scope @bolt/components-icons -- npm run watch"
   },
   "config": {
