--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build:bolt-site": "cd apps/bolt-site && npm run build:prod",
     "Xbuild:drupal-lab": "cd apps/drupal-lab && cd web/themes/flash && npm run build && cd - && composer run build",
     "build:icons": "lerna exec --scope @bolt/components-icons -- npm run build",
-    "build": "npm-run-all --parallel build:* --aggregate-output --print-label --print-name",
+    "build": "npm-run-all build:* --aggregate-output --print-label --print-name --parallel",
     "composer:pl": "cd apps/pattern-lab && composer install --no-interaction --prefer-dist",
     "composer:core-php": "cd packages/core-php && composer install --no-interaction --prefer-dist",
     "composer:bolt-site": "cd apps/bolt-site && composer install --no-interaction --prefer-dist",
