--- a/packages/components/bolt-sticky/package.json
+++ b/packages/components/bolt-sticky/package.json
@@ -37,7 +37,7 @@
     "access": "public"
   },
   "dependencies": {
-    "stickybits": "^2.0.13"
+    "stickyfilljs": "^2.0.3"
   },
   "schema": "sticky.schema.yml"
 }
