--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@bolt/build-tools": "^1.1.5",
+    "@bolt/components-placeholder": "^1.1.4",
     "@bolt/components-action-blocks": "^1.1.4",
     "@bolt/components-background": "^1.1.4",
     "@bolt/components-background-shapes": "^1.1.4",
