--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "lint:twig": "./packages/core-php/vendor/bin/twig-lint lint packages --only-print-errors && ./packages/core-php/vendor/bin/twig-lint lint apps --only-print-errors --exclude=apps/drupal-lab",
     "lint:yaml": "yamllint 'packages/**/*.yml' --ignore='**/vendor/**'",
     "lint": "npm-run-all --continue-on-error --serial lint:*",
-    "prepush": "npm run lint && npm run test",
+    "precommit": "lint-staged",
+    "prepush": "npm run test",
     "test:js": "jest",
     "test:js:watch": "jest --watch",
     "test:php": "cd packages/core-php && composer run test",
@@ -82,13 +83,16 @@
     "husky": "^0.14.3",
     "jest": "^22.4.0",
     "lerna": "^2.5.1",
+    "lint-staged": "^7.0.4",
     "node-fetch": "^2.0.0",
     "now": "^11.0.6",
     "npm-run-all": "^4.1.2",
     "web-component-tester": "^6.3.0",
-    "yaml-lint": "^1.2.2"
+    "yaml-lint": "^1.2.2",
+    "nightwatch": "^0.9.20"
   },
   "workspaces": [
+    "packages/components/bolt-placeholder",
     "packages/components/bolt-action-blocks",
     "packages/components/bolt-background-shapes",
     "packages/components/bolt-background",
