--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,7 +21,7 @@
     "hyperhtml": "^2.5.10",
     "preact": "^8.2.7",
     "sassy-maps": "github:at-import/Sassy-Maps#0.x.x",
-    "skatejs": "^5.1.1",
+    "skatejs": "5.1.1",
     "yocss": "^0.5.1"
   },
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
