chore: updating linting rules to ignore pw-site built assets

--- a/.eslintignore
+++ b/.eslintignore
@@ -3,6 +3,7 @@
 **/sandbox/**
 /www/**
 /apps/drupal-lab/**
+/apps/pw-site/www/**
 **/dist/**
 # file has syntax errors
 apps/pattern-lab/src/_annotations/annotations.js
