fix: updating polyfill loader to always use document-register-element (instead of the custom element ES6 adapter) to avoid JS errors getting thrown in components being loaded immediately vs async loaded

--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -46,7 +46,7 @@
     "@bolt/components-navbar": "^1.2.2",
     "@bolt/components-navlink": "^1.2.2",
     "@bolt/components-ordered-list": "^1.2.2",
-    "@bolt/components-page-footer": "^1.1.2",
+    "@bolt/components-page-footer": "file:../../packages/components/bolt-page-footer",
     "@bolt/components-page-header": "^1.2.2",
     "@bolt/components-placeholder": "^1.2.2",
     "@bolt/components-share": "^1.2.2",
