--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -62,7 +62,8 @@
     "uglifyjs-webpack-plugin": "^1.2.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.0",
-    "webpack-manifest-plugin": "^2.0.0-rc.1"
+    "webpack-manifest-plugin": "^2.0.0-rc.1",
+    "yaml-loader": "^0.5.0"
   },
   "publishConfig": {
     "access": "public"
