--- a/packages/components/bolt-code-snippet/package.json
+++ b/packages/components/bolt-code-snippet/package.json
@@ -1,8 +1,27 @@
 {
   "name": "@bolt/components-code-snippet",
   "description": "Code Snippet Component in Bolt",
+  "keywords": [
+    "bolt design system",
+    "bolt",
+    "css framework",
+    "design system",
+    "components"
+  ],
   "version": "0.0.0",
   "homepage": "https://bolt-design-system.com",
+  "maintainers": [
+    {
+      "name": "Salem Ghoweri",
+      "email": "me@salemghoweri.com",
+      "web": "https://github.com/sghoweri"
+    },
+    {
+      "name": "Mike Mai",
+      "email": "boss@mikemai.net",
+      "web": "http://mikemai.net/"
+    }
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -11,6 +30,7 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
+  "main": "src/index.js",
   "style": "src/code-snippet.scss",
   "twig": "src/code-snippet.twig",
   "schema": "code-snippet.schema.yml",
@@ -18,6 +38,15 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^1.1.2"
+    "@bolt/core": "^1.1.2",
+    "prismjs": "^1.13.0",
+    "refractor": "^2.3.0",
+    "rehype": "^5.0.1",
+    "snabbdom-to-html": "^5.1.0",
+    "snabbdom": "^0.7.1",
+    "hast-util-to-snabbdom": "^0.1.4",
+    "hast-to-hyperscript": "^4.0.0",
+    "snabby": "^1.0.0",
+    "snabbdom-virtualize": "0.7.0"
   }
 }
