--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -63,6 +63,7 @@
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.0",
     "webpack-manifest-plugin": "^2.0.0-rc.1",
+    "deepmerge": "^2.1.0",
     "yaml-loader": "^0.5.0"
   },
   "publishConfig": {
