Update Now.sh Deploy Script to use to bolt-design-system.com Domain (#634)
* feat: update deploy script to use new now.sh custom domain name

* fix: swapping out additional now.sh domain with bolt-design-system.com domain

* test: testing environment var checks

* test: testing travis config tweak

* Update Yarn version to latest

* Update package.json

* Update package.json

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update package.json

* Update .travis.yml

* Update .travis.yml

* test: testing pl install time on travis

* test: re-testing with sudo disabled + --prefer-dist flag

* test: updating package.json

* test: updating travis config

* test: revert git config

* test: retesting travis config

* test: re-testing package.json updates

* test: testing build jobs

* test: retesting travis jobs

* test: re-testing build command in Travis

* test: re-testing jobs / stages

* test: re-testing travis build

* test: re-testing travis config

* test: re-testing optimizations

* fix: fixing aliased url to be a subdomain of bolt-design-system.com

* chore: update travis.sh commands to run using `yarn` instead of `npm`

* chore: clean up hunk of logic in deploy.js that should no longer be required based on the current logic in place

* chore: cleaning up travis config

* test: updating remaining `npm run` commands to use `yarn run` instead

* test: re-testing with sudo enabled

* test: re-testing with psuedo disabled

* Update package.json

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,58 +1,40 @@
+sudo: false
+dist: trusty
+
 language: php
 php:
   - 7.1
 
 addons:
   sauce_connect: true
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    packages:
-    - g++-4.8
-    - graphicsmagick
 
 before_install:
 - nvm install # version lifted from `.nvmrc`
-# yarn install
-- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.3.2
+- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.6.0
 - export PATH="$HOME/.yarn/bin:$PATH"
-- node --version && npm --version && yarn --version && composer --version
-- composer global require hirak/prestissimo
-- if [[ -n "$GITHUB_TOKEN" ]]; then composer config -g github-oauth.github.com ${GITHUB_TOKEN};
-  fi;
 
 before_script:
 - phpenv config-rm xdebug.ini
 
 install:
-- yarn install
-- yarn global add nightwatch
-- npm run setup
+- yarn run setup
 
 before_script:
-- npm run lint
-- npm test
+- yarn run lint
+- yarn run test
 
 # Can't do deploy on `after_success` b/c if deploy fails, the build still reports success. Can't use `deploy` step b/c Travis skips that on PRs.
 script:
-- time bash ./travis.sh
-- nightwatch --config nightwatch.js --env chrome,ie11
-
-after_success: # Warning: this fires after a build is already marked as successful so failing this will not fail the build.
-  - git status # Just want to check
+- bash ./travis.sh # time command already run inside the travis.sh script
+- npx nightwatch --config nightwatch.js --env chrome,ie11
 
 cache:
   apt: true
   yarn: true
   directories:
+    - $HOME/.composer/cache/files
+    - $HOME/.cache/yarn
     - node_modules
-    - $HOME/.composer
-    - apps/drupal-lab/vendor
-    - apps/drupal-lab/web/core
-    - apps/pattern-lab/vendor
-    - apps/bolt-site/vendor
-    - apps/pw-site/vendor
-    - packages/core-php/vendor
 
 notifications:
   email:
