--- a/apps/pw-site/package.json
+++ b/apps/pw-site/package.json
@@ -2,6 +2,7 @@
   "name": "@bolt/pw-site",
   "version": "1.2.3",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "build": "bolt build",
     "build:noisy": "bolt build --verbosity 5",
@@ -20,9 +21,6 @@
     "@bolt/components-video": "^1.2.3",
     "@bolt/core": "^1.2.3",
     "@bolt/global": "^1.2.3"
-  },
-  "publishConfig": {
-    "access": "public"
   },
   "main": "www/bolt-scripts/pw-site/pw.js",
   "style": "www/bolt-scripts/pw-site/pw.css"
