--- a/package.json
+++ b/package.json
@@ -87,7 +87,13 @@
     "npm-run-all": "^4.1.2",
     "web-component-tester": "^6.6.0-pre.5",
     "yaml-lint": "^1.2.2",
-    "nightwatch": "^0.9.20"
+    "nightwatch": "^0.9.20",
+    "puppeteer": "^1.3.0",
+    "p-iteration": "^1.1.5",
+    "wendigo": "^0.7.1",
+    "expect-puppeteer": "^2.4.0",
+    "jest-environment-puppeteer": "^2.4.0",
+    "jest-puppeteer": "^2.4.0"
   },
   "workspaces": [
     "packages/components/bolt-placeholder",
