--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "p-iteration": "^1.1.5",
     "wendigo": "^0.7.1",
     "expect-puppeteer": "^2.4.0",
-    "git-semver-tags": "^1.3.6"
+    "git-semver-tags": "^1.3.6",
     "jest-environment-puppeteer": "^2.4.0",
     "jest-puppeteer": "^2.4.0"
   },
