styles: syntax light and dark mode

--- a/packages/components/bolt-code-snippet/package.json
+++ b/packages/components/bolt-code-snippet/package.json
@@ -30,7 +30,7 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "main": "src/index.js",
+  "main": "src/code-snippet.js",
   "style": "src/code-snippet.scss",
   "twig": "src/code-snippet.twig",
   "schema": "code-snippet.schema.yml",
