Tweaking how paragraphs display

--- a/apps/drupal-lab/web/themes/flash/flash.info.yml
+++ b/apps/drupal-lab/web/themes/flash/flash.info.yml
@@ -2,7 +2,7 @@ name: Flash
 type: theme
 description: A theme that uses Bolt
 core: 8.x
-base theme: stable
+base theme: classy
 screenshot: screenshot.jpg
 libraries:
   - flash/global
