feat: update font loader to be wired up to font stack JS data

--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -22,6 +22,8 @@
     }
   ],
   "dependencies": {
+    "node-sass": "^4.9.0",
+    "node-sass-utils": "^1.1.2",
     "@bolt/babel-preset-bolt": "^1.2.1",
     "@theme-tools/sass-export-data": "^1.1.1",
     "@theme-tools/sass-import-globbing": "^1.0.1",
