Add @bolt/core dependencies to the few packages that lacked such.

--- a/packages/components/bolt-link/package.json
+++ b/packages/components/bolt-link/package.json
@@ -19,5 +19,8 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "@bolt/core": "^1.3.0"
+  },
   "schema": "link.schema.yml"
 }
