--- a/packages/components/bolt-site/package.json
+++ b/packages/components/bolt-site/package.json
@@ -18,5 +18,8 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "@bolt/core": "^1.3.0"
+  },
   "style": "site.scss"
 }
