--- a/packages/components/bolt-sticky/package.json
+++ b/packages/components/bolt-sticky/package.json
@@ -37,6 +37,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@bolt/core": "^1.3.0",
     "stickyfilljs": "^2.0.3"
   },
   "schema": "sticky.schema.yml"
