Add core dependency to remaining packages that lack it.

--- a/packages/components/bolt-page-footer/package.json
+++ b/packages/components/bolt-page-footer/package.json
@@ -5,6 +5,9 @@
   "sourceFilesFrom": "0.9.0",
   "license": "MIT",
   "private": true,
+  "dependencies": {
+    "@bolt/core": "^1.3.0"
+  },
   "style": "page-footer.scss",
   "schema": "page-footer.schema.yml",
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
