--- a/packages/components/bolt-chip-list/package.json
+++ b/packages/components/bolt-chip-list/package.json
@@ -30,6 +30,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@bolt/core": "^1.3.0",
     "@bolt/components-chip": "^1.3.0",
     "@bolt/global": "^1.3.0"
   },
