--- a/packages/components/bolt-chip-list/package.json
+++ b/packages/components/bolt-chip-list/package.json
@@ -31,8 +31,7 @@
   },
   "dependencies": {
     "@bolt/core": "^1.3.0",
-    "@bolt/components-chip": "^1.3.0",
-    "@bolt/global": "^1.3.0"
+    "@bolt/components-chip": "^1.3.0"
   },
   "schema": "chip-list.schema.yml"
 }
