--- a/packages/components/bolt-chip-list/package.json
+++ b/packages/components/bolt-chip-list/package.json
@@ -30,8 +30,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/components-chip": "^1.3.0",
-    "@bolt/global": "^1.3.0"
+    "@bolt/core": "^1.3.0",
+    "@bolt/components-chip": "^1.3.0"
   },
   "schema": "chip-list.schema.yml"
 }
