chore: re-organize folders

--- a/packages/components/bolt-navbar/package.json
+++ b/packages/components/bolt-navbar/package.json
@@ -25,7 +25,9 @@
   "license": "MIT",
   "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-navbar",
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
-  "style": "navbar.scss",
+  "style": "src/navbar.scss",
+  "twig": "src/navbar.twig",
+  "schema": "navbar.schema.yml",
   "publishConfig": {
     "access": "public"
   },
