--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -57,14 +57,24 @@
     "sass-loader": "^7.0.1",
     "semver": "^5.5.0",
     "sharp": "^0.20.2",
+    "html-webpack-plugin": "^3.2.0",
     "string-replace-loader": "^2.1.1",
+    "preload-webpack-plugin": "^2.3.0",
     "style-loader": "^0.21.0",
     "svgo": "^1.0.5",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.6.0",
+    "webpack-hot-middleware": "^2.22.1",
+    "url-loader": "^1.0.1",
+    "css-hot-loader": "^1.3.9",
     "webpack-dev-server": "^3.1.3",
     "webpack-manifest-plugin": "^2.0.2",
-    "yaml-loader": "^0.5.0"
+    "yaml-loader": "^0.5.0",
+    "webpack-serve": "^0.3.2",
+    "webpack-stylish": "^0.1.8",
+    "fast-sass-loader": "^1.4.5",
+    "ws": "^5.1.1",
+    "json-stringify-safe": "^5.0.1"
   },
   "publishConfig": {
     "access": "public"
