chore: clean up Webpack compile + serve commands; remove Webpack watch command no longer needed

--- a/apps/pattern-lab/config/config.yml
+++ b/apps/pattern-lab/config/config.yml
@@ -25,6 +25,7 @@ cacheBusterOn: 'true'
 publicDir: ../../www/pattern-lab/
 sourceDir: src
 defaultPattern: viewall-components-all
+defaultPattern: components-overview
 defaultShowPatternInfo: false
 ishMinimum: '240'
 ishMaximum: '2600'
