--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -24,57 +24,59 @@
   "dependencies": {
     "@bolt/babel-preset-bolt": "^1.2.1",
     "@theme-tools/sass-export-data": "^1.1.1",
-    "@theme-tools/sass-import-globbing": "^1.0.1",
-    "autoprefixer": "^8.4.1",
+    "autoprefixer": "^8.5.0",
     "babel-loader": "^8.0.0-beta.2",
-    "browser-sync": "^2.24.1",
+    "browser-sync": "^2.24.4",
     "chalk": "^2.4.1",
     "chokidar": "^2.0.3",
     "clean-css-loader": "^1.0.1",
+    "clean-webpack-plugin": "^0.1.19",
     "commander": "^2.15.1",
     "convert-hrtime": "^2.0.0",
+    "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
     "deepmerge": "^2.1.0",
     "del": "^3.0.0",
+    "fast-sass-loader": "^1.4.5",
     "file-loader": "^1.1.11",
     "front-matter": "^2.3.0",
     "globby": "^8.0.1",
-    "inline-source-loader": "^0.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "js-yaml": "^3.11.0",
+    "json-stringify-safe": "^5.0.1",
     "jsonschema": "^1.2.4",
     "lodash.debounce": "^4.0.8",
     "marked": "^0.3.19",
+    "node-sass": "^4.9.0",
     "mini-css-extract-plugin": "^0.4.0",
     "mkdirp": "^0.5.1",
     "node-notifier": "^5.2.1",
-    "npm-sass": "^2.2.1",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "ora": "^2.1.0",
     "postcss-discard-duplicates": "^2.1.0",
     "postcss-loader": "^2.1.4",
+    "webpack-stats-plugin": "^0.2.1",
+    "preload-webpack-plugin": "^3.0.0-alpha.3",
     "pretty-ms": "^3.1.0",
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.1",
     "semver": "^5.5.0",
     "sharp": "^0.20.2",
-    "html-webpack-plugin": "^3.2.0",
     "string-replace-loader": "^2.1.1",
-    "preload-webpack-plugin": "^2.3.0",
     "style-loader": "^0.21.0",
     "svgo": "^1.0.5",
+    "twig-loader": "^0.3.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.6.0",
-    "webpack-hot-middleware": "^2.22.1",
     "url-loader": "^1.0.1",
-    "css-hot-loader": "^1.3.9",
+    "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.1",
     "webpack-manifest-plugin": "^2.0.2",
-    "yaml-loader": "^0.5.0",
-    "webpack-serve": "^0.3.2",
+    "webpack-serve": "^1.0.2",
     "webpack-stylish": "^0.1.8",
-    "fast-sass-loader": "^1.4.5",
+    "webpack": "^4.8.3",
     "ws": "^5.1.1",
-    "json-stringify-safe": "^5.0.1"
+    "yaml-loader": "^0.5.0"
   },
   "publishConfig": {
     "access": "public"
