Text Component -- added icon params and completed twig template

--- a/packages/components/bolt-text/package.json
+++ b/packages/components/bolt-text/package.json
@@ -20,5 +20,6 @@
   "dependencies": {
     "@bolt/components-link": "^1.1.2",
     "@bolt/core": "^1.1.4"
-  }
+  },
+  "schema": "text.schema.yml"
 }
