add dummy schema for rest of form elements

--- a/packages/components/bolt-form/package.json
+++ b/packages/components/bolt-form/package.json
@@ -22,5 +22,16 @@
   "devDependencies": {
     "@bolt/core": "^1.3.0"
   },
-  "schema": "form.schema.yml"
+  "schema": [
+    "form.schema.yml",
+    "src/elements/form-element.schema.yml",
+    "src/elements/form-fieldset.schema.yml",
+    "src/elements/form-label.schema.yml",
+    "src/inputs/form-button.schema.yml",
+    "src/inputs/form-checkboxes.schema.yml",
+    "src/inputs/form-input.schema.yml",
+    "src/inputs/form-radios.schema.yml",
+    "src/inputs/form-select.schema.yml",
+    "src/inputs/form-textarea.schema.yml"
+  ]
 }
