chore: add missing schema keys to a handful of component's package.json files

--- a/packages/components/bolt-block-list/package.json
+++ b/packages/components/bolt-block-list/package.json
@@ -11,6 +11,7 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
+  "schema": "block-list.schema.yml",
   "style": "src/block-list.scss",
   "main": "src/block-list.js",
   "twig": "src/block-list.twig",
