--- a/packages/components/bolt-copy-to-clipboard/package.json
+++ b/packages/components/bolt-copy-to-clipboard/package.json
@@ -11,6 +11,7 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
+  "schema": "copy-to-clipboard.schema.yml",
   "style": "src/copy-to-clipboard.scss",
   "main": "src/copy-to-clipboard.js",
   "twig": "src/copy-to-clipboard.twig",
