--- a/packages/components/bolt-share/package.json
+++ b/packages/components/bolt-share/package.json
@@ -11,6 +11,7 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
+  "schema": "share.schema.yml",
   "style": "src/share.scss",
   "twig": "src/share.twig",
   "publishConfig": {
