--- a/packages/components/bolt-tooltip/package.json
+++ b/packages/components/bolt-tooltip/package.json
@@ -11,6 +11,7 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
+  "schema": "tooltip.schema.yml",
   "style": "src/tooltip.scss",
   "main": "src/tooltip.js",
   "twig": "src/tooltip.twig",
