--- a/packages/components/bolt-dropdown/package.json
+++ b/packages/components/bolt-dropdown/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@bolt/components-dropdown",
   "main": "index.js",
+  "schema": "dropdown.schema.yml",
   "style": "dropdown.scss",
   "twig": "dropdown.twig",
   "description": "Dropdown Component",
