chore: lock version of npm-sass to fix backwards compatibility with later versions

--- a/build-tools/gulp-tasks/build-webpack/package.json
+++ b/build-tools/gulp-tasks/build-webpack/package.json
@@ -33,7 +33,7 @@
 		"fs-extra": "^4.0.2",
 		"gulp-util": "^3.0.8",
 		"node-sass-export": "github:bolt-design-system/node-sass-export",
-		"npm-sass": "^2.2.1",
+		"npm-sass": "2.2.1",
 		"sass-loader": "^6.0.6",
 		"style-loader": "^0.18.2",
 		"typescript": "^2.5.3",
