--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
     "nodemon": "^1.12.1",
     "now-travis": "^1.0.1",
     "npm-run-all": "^4.0.2",
-    "npm-sass": "^2.2.1",
+    "npm-sass": "2.2.1",
     "object-assign": "^4.1.1",
     "object.assign": "^4.0.4",
     "path": "^0.12.7",
