--- a/build-tools/gulp-tasks/build-styles/package.json
+++ b/build-tools/gulp-tasks/build-styles/package.json
@@ -58,7 +58,7 @@
 		"node-sass-export": "github:bolt-design-system/node-sass-export",
 		"node-sass-import-once": "^1.2.0",
 		"node-sass-magic-importer": "^5.0.0-alpha.15",
-		"npm-sass": "^2.2.1",
+		"npm-sass": "2.2.1",
 		"postcss-discard-comments": "^2.0.4",
 		"postcss-reporter": "^5.0.0",
 		"postcss-scss": "^1.0.2",
