feat: 1st pass building priority-nav component

--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@bolt/build-tools": "^1.3.3",
     "@bolt/components-action-blocks": "^1.3.0",
+    "@bolt/components-priority-nav": "^1.3.0",
     "@bolt/components-background": "^1.3.0",
     "@bolt/components-background-shapes": "^1.3.0",
     "@bolt/components-band": "^1.3.0",
