--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
   },
   "workspaces": [
     "packages/components/bolt-placeholder",
+    "packages/components/bolt-priority-nav",
     "packages/components/bolt-action-blocks",
     "packages/components/bolt-background-shapes",
     "packages/components/bolt-background",
