--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -47,6 +47,7 @@
     "mini-css-extract-plugin": "^0.4.0",
     "mkdirp": "^0.5.1",
     "node-notifier": "^5.2.1",
+    "chromatism": "^3.0.0",
     "npm-sass": "^2.2.1",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "ora": "^2.1.0",
@@ -57,6 +58,7 @@
     "sass-loader": "^7.0.1",
     "semver": "^5.5.0",
     "sharp": "^0.20.2",
+    "postcss-scss": "^1.0.5",
     "string-replace-loader": "^2.1.1",
     "style-loader": "^0.21.0",
     "svgo": "^1.0.5",
@@ -64,7 +66,11 @@
     "webpack": "^4.6.0",
     "webpack-dev-server": "^3.1.3",
     "webpack-manifest-plugin": "^2.0.2",
-    "yaml-loader": "^0.5.0"
+    "yaml-loader": "^0.5.0",
+    "node-sass-utils": "^1.1.2",
+    "node-sass": "^4.9.0",
+    "node-sass-functions-json": "^1.0.0",
+    "sassyjson": "^1.1.8"
   },
   "publishConfig": {
     "access": "public"
