--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -8,7 +8,8 @@
   "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/global",
   "dependencies": {
     "@bolt/core": "^1.3.0",
-    "normalize-scss": "^7.0.0"
+    "normalize-scss": "^7.0.0",
+    "@datorama/themify": "^1.0.2"
   },
   "publishConfig": {
     "access": "public"
