chore: update themify pkg version for consistency

--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -22,7 +22,7 @@
     }
   ],
   "dependencies": {
-    "@bolt/themify": "0.0.0-development",
+    "@bolt/themify": "1.3.0",
     "@bolt/babel-preset-bolt": "^1.2.1",
     "@theme-tools/sass-export-data": "^1.1.1",
     "@theme-tools/sass-import-globbing": "^1.0.1",
