--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -7,7 +7,7 @@
   "style": "styles/index.scss",
   "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/global",
   "dependencies": {
-    "@bolt/themify": "0.0.0-development",
+    "@bolt/themify": "1.3.0",
     "@bolt/core": "^1.3.0",
     "normalize-scss": "^7.0.0"
   },
