--- a/packages/themify/package.json
+++ b/packages/themify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/themify",
-  "version": "0.0.0-development",
+  "version": "1.3.0",
   "description": "CSS themes made easy. A robust, opinionated solution to manage themes in your web application",
   "main": "index.js",
   "gh-pages-deploy": {
