--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,7 +7,7 @@
   "style": "styles/index.scss",
   "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/core",
   "dependencies": {
-    "@bolt/themify": "0.0.0-development",
+    "@bolt/themify": "1.3.0",
     "@webcomponents/custom-elements": "^1.0.8",
     "@webcomponents/shadycss": "^1.1.1",
     "@webcomponents/shadydom": "^1.0.14",
