feat: add critical css vars package -- handles async loading CSS vars fallback if unsupported

--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -35,6 +35,7 @@
     "@bolt/components-chip-list": "^1.3.0",
     "@bolt/components-copy-to-clipboard": "^1.3.4",
     "@bolt/components-critical-fonts": "^1.3.0",
+    "@bolt/components-critical-css-vars": "^1.3.0",
     "@bolt/components-device-viewer": "^1.3.0",
     "@bolt/components-figure": "^1.3.0",
     "@bolt/components-form": "^1.3.0",
