--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "packages/components/bolt-chip-list",
     "packages/components/bolt-chip",
     "packages/components/bolt-copy-to-clipboard",
+    "packages/components/bolt-critical-css-vars",
     "packages/components/bolt-critical-fonts",
     "packages/components/bolt-device-viewer",
     "packages/components/bolt-figure",
