--- a/apps/pw-site/package.json
+++ b/apps/pw-site/package.json
@@ -21,9 +21,7 @@
     "@bolt/core": "^1.3.0",
     "@bolt/global": "^1.3.0"
   },
-  "publishConfig": {
-    "access": "public"
-  },
+  "private": true,
   "main": "www/bolt-scripts/pw-site/pw.js",
   "style": "www/bolt-scripts/pw-site/pw.css"
 }
